dilang-interpreter/test/cases/errors/unknown_function.di
fn main() {
    nope(1)
}
